fixed align

--- a/app/assets/stylesheets/common/structure.scss
+++ b/app/assets/stylesheets/common/structure.scss
@@ -303,7 +303,7 @@ body {
   }
 
   .content {
-    width: 970px;
+    width: 990px;
     margin: 0 auto;
     overflow: visible;
     /*z-index: 1;*/
