--- a/app/assets/stylesheets/section/delivery.scss
+++ b/app/assets/stylesheets/section/delivery.scss
@@ -133,3 +133,7 @@ div#delivery_time {
     }
   }
 }
+.content { 
+width:970px !important;
+}
+
