--- a/app/assets/stylesheets/section/olookmovel.scss
+++ b/app/assets/stylesheets/section/olookmovel.scss
@@ -5,7 +5,6 @@ section#kombi {
     width: 500px;
     float: left;
     position: relative;
-    left: 11px;
     h1 {
       font-family: $johnston;
       font-size: 22px;
@@ -160,4 +159,8 @@ section#kombi {
       }
     }
   }
+}
+
+.content { 
+  width:970px !important;
 }
